[package]
name = "multiwii_serial_protocol_v2"
description = "A Multiwii Serial Protocol (MSP) implementation for Rust"
repository = "https://github.com/amfern/multiwii_serial_protocol.rs"
version = "0.1.8"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>", "Ilya Guterman <amfernusus@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
packed_struct = "0.3"
packed_struct_codegen = "0.3"
serde = "1.0"
serde_derive = "1.0"
crc-any = "2.3"

[features]
default = ["std"]
std = []
no_std = []