[package]
name = "multiwii_serial_protocol_v2"
description = "A Multiwii Serial Protocol (MSP) implementation for Rust"
repository = "https://github.com/amfern/multiwii_serial_protocol.rs"
version = "0.1.12"
edition = '2018'
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>", "Ilya Guterman <amfernusus@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
casey = "0"
crc-any = "2.3"
packed_struct = "0.4"
packed_struct_codegen = "0.4"
serde = "1.0"
serde_derive = "1.0"
futures = { version = "0.3", optional = true }

[features]
default = ["std"]
std = []
no_std = []
suppport_int32_setting_type = []
async = ["futures"]
